--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
-123
+<!DOCTYPE html>
+<html lang="ru">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NeoBank</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./src/css/main.css">
+    <link rel="stylesheet" href="./src/css/media.css">
+</head>
+
+<body>
+    <header class="header">
+        <div class="container">
+            <nav class="header__nav">
+                <img class="header__logo" src="./src/img/icons/neobank.png" alt="NeoBank">
+                <div class="header__links">
+                    <div class="header__links-link">Credit card</div>
+                    <div class="header__links-link">Product</div>
+                    <div class="header__links-link">Account</div>
+                    <div class="header__links-link">Resources</div>
+                </div>
+                <button class="button header__button">Online Bank</button>
+                <input id="burger__toggle" type="checkbox" />
+                <label class="burger__btn" for="burger__toggle">
+                    <span></span>
+                </label>
+                <ul class="burger__box">
+                    <li><a class="burger__item" href="#">Credit card</a></li>
+                    <li><a class="burger__item" href="#">Product</a></li>
+                    <li><a class="burger__item" href="#">Account</a></li>
+                    <li><a class="burger__item" href="#">Resources</a></li>
+                    <li><a class="burger__item button" href="#">Online Bank</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <section class="cards">
+        <div class="container"></div>
+    </section>
+    <section class="features">
+        <div class="container"></div>
+    </section>
+    <section class="exchange">
+        <div class="container"></div>
+    </section>
+    <section class="map">
+        <div class="container"></div>
+    </section>
+    <section class="support">
+        <div class="container"></div>
+    </section>
+</body>
+
+</html>
