Сделаны все секции, кроме support и footer

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <div class="container">
             <nav class="header__nav">
                 <img class="header__logo" src="./src/img/icons/neobank.png" alt="NeoBank">
-                <div class="header__links">
-                    <div class="header__links-link">Credit card</div>
-                    <div class="header__links-link">Product</div>
-                    <div class="header__links-link">Account</div>
-                    <div class="header__links-link">Resources</div>
-                </div>
+                <ul class="header__links">
+                    <li class="header__links-link">Credit card</li>
+                    <li class="header__links-link">Product</li>
+                    <li class="header__links-link">Account</li>
+                    <li class="header__links-link">Resources</li>
+                </ul>
                 <button class="button header__button">Online Bank</button>
                 <input id="burger__toggle" type="checkbox" />
                 <label class="burger__btn" for="burger__toggle">
@@ -41,20 +41,120 @@
         </div>
     </header>
     <section class="cards">
-        <div class="container"></div>
+        <div class="container">
+            <div class="cards__wrapper">
+                <div class="cards__block">
+                    <h1 class="cards__title">Choose the design you like and apply for card right now</h1>
+                    <button class="button cards__button">Choose the card</button>
+                </div>
+                <div class="cards__block">
+                    <div class="cards__block-card">
+                        <img src="./src/img/cards/cardimage_1.jpg" alt="card1">
+                    </div>
+                    <div class="cards__block-card">
+                        <img src="./src/img/cards/cardimage_2.jpg" alt="card2">
+                    </div>
+                    <div class="cards__block-card">
+                        <img src="./src/img/cards/cardimage_3.jpg" alt="card3">
+                    </div>
+                    <div class="cards__block-card">
+                        <img src="./src/img/cards/cardimage_4.jpg" alt="card4">
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <section class="features">
-        <div class="container"></div>
+        <div class="container">
+            <div class="features__wrapper">
+                <div class="features__img">
+                    <img src="./src/img/home/Illustration_man.png" alt="illustration">
+                </div>
+                <div class="features__textblock">
+                    <h2 class="features__title">We Provide Many Features You Can Use</h2>
+                    <h3 class="features__subtitle">You can explore the features that we provide with fun and have their
+                        own functions each feature
+                    </h3>
+                    <ul class="features__list">
+                        <div class="features__list-block">
+                            <img src="./src/img/icons/check.svg" alt="checkImg">
+                            <li class="features__list-item">Powerfull online protection</li>
+                        </div>
+                        <div class="features__list-block">
+                            <img src="./src/img/icons/check.svg" alt="checkImg">
+                            <li class="features__list-item">Cashback without borders</li>
+                        </div>
+                        <div class="features__list-block">
+                            <img src="./src/img/icons/check.svg" alt="checkImg">
+                            <li class="features__list-item">Personal design</li>
+                        </div>
+                        <div class="features__list-block">
+                            <img src="./src/img/icons/check.svg" alt="checkImg">
+                            <li class="features__list-item">Work anywhere in the world</li>
+                        </div>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </section>
     <section class="exchange">
-        <div class="container"></div>
+        <div class="container">
+            <div class="exchange__wrapper">
+                <div class="exchange__block">
+                    <h2 class="exchange__title">Exchange rate in internet bank</h2>
+                    <h3 class="exchange__subtitle">Currency</h3>
+                    <div class="exchange__currency">
+                        <div class="exchange__currency-block">
+                            <div class="exchange__currency-text">USD:&nbsp</div>
+                            <div class="exchange__currency-amount">60.78</div>
+                        </div>
+                        <div class="exchange__currency-block">
+                            <div class="exchange__currency-text">USD:&nbsp</div>
+                            <div class="exchange__currency-amount">60.78</div>
+                        </div>
+                        <div class="exchange__currency-block">
+                            <div class="exchange__currency-text">USD:&nbsp</div>
+                            <div class="exchange__currency-amount">60.78</div>
+                        </div>
+                        <div class="exchange__currency-block">
+                            <div class="exchange__currency-text">USD:&nbsp</div>
+                            <div class="exchange__currency-amount">60.78</div>
+                        </div>
+                        <div class="exchange__currency-block">
+                            <div class="exchange__currency-text">USD:&nbsp</div>
+                            <div class="exchange__currency-amount">60.78</div>
+                        </div>
+                        <div class="exchange__currency-block">
+                            <div class="exchange__currency-text">USD:&nbsp</div>
+                            <div class="exchange__currency-amount">60.78</div>
+                        </div>
+                    </div>
+                    <a href="/" class="exchange__link">All courses</a>
+                </div>
+                <div class="exchange__block">
+                    <div class="exchange__update">Update every 15 minutes, MSC 09.08.2022</div>
+                    <img class="exchange__img" src="./src/img/icons/townhall.svg" alt="townhall">
+                </div>
+            </div>
+        </div>
     </section>
     <section class="map">
-        <div class="container"></div>
+        <div class="container">
+            <div class="map__wrapper">
+                <h2 class="map__title">You can use our services anywhere in the world</h2>
+                <h3 class="map__subtitle">Withdraw and transfer money online through our application</h3>
+                <img class="map__img" src="./src/img/home/map.png" alt="map">
+            </div>
+        </div>
     </section>
     <section class="support">
         <div class="container"></div>
     </section>
+    <footer class="footer">
+        <div class="container">
+
+        </div>
+    </footer>
 </body>
 
 </html>
