--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/css/main.css">
     <link rel="stylesheet" href="./src/css/media.css">
 </head>
@@ -71,8 +72,9 @@
                     <img src="./src/img/home/Illustration_man.png" alt="illustration">
                 </div>
                 <div class="features__textblock">
-                    <h2 class="features__title">We Provide Many Features You Can Use</h2>
-                    <h3 class="features__subtitle">You can explore the features that we provide with fun and have their
+                    <h2 class="features__title">We&nbsp;Provide Many Features You Can Use</h2>
+                    <h3 class="features__subtitle">You can explore the features that we&nbsp;provide with fun and have
+                        their
                         own functions each feature
                     </h3>
                     <ul class="features__list">
@@ -90,7 +92,7 @@
                         </div>
                         <div class="features__list-block">
                             <img src="./src/img/icons/check.svg" alt="checkImg">
-                            <li class="features__list-item">Work anywhere in the world</li>
+                            <li class="features__list-item">Work anywhere in&nbsp;the world</li>
                         </div>
                     </ul>
                 </div>
@@ -101,38 +103,38 @@
         <div class="container">
             <div class="exchange__wrapper">
                 <div class="exchange__block">
-                    <h2 class="exchange__title">Exchange rate in internet bank</h2>
+                    <h2 class="exchange__title">Exchange rate in&nbsp;internet bank</h2>
                     <h3 class="exchange__subtitle">Currency</h3>
                     <div class="exchange__currency">
                         <div class="exchange__currency-block">
-                            <div class="exchange__currency-text">USD:&nbsp</div>
+                            <div class="exchange__currency-text">USD:&nbsp;</div>
                             <div class="exchange__currency-amount">60.78</div>
                         </div>
                         <div class="exchange__currency-block">
-                            <div class="exchange__currency-text">USD:&nbsp</div>
+                            <div class="exchange__currency-text">USD:&nbsp;</div>
                             <div class="exchange__currency-amount">60.78</div>
                         </div>
                         <div class="exchange__currency-block">
-                            <div class="exchange__currency-text">USD:&nbsp</div>
+                            <div class="exchange__currency-text">USD:&nbsp;</div>
                             <div class="exchange__currency-amount">60.78</div>
                         </div>
                         <div class="exchange__currency-block">
-                            <div class="exchange__currency-text">USD:&nbsp</div>
+                            <div class="exchange__currency-text">USD:&nbsp;</div>
                             <div class="exchange__currency-amount">60.78</div>
                         </div>
                         <div class="exchange__currency-block">
-                            <div class="exchange__currency-text">USD:&nbsp</div>
+                            <div class="exchange__currency-text">USD:&nbsp;</div>
                             <div class="exchange__currency-amount">60.78</div>
                         </div>
                         <div class="exchange__currency-block">
-                            <div class="exchange__currency-text">USD:&nbsp</div>
+                            <div class="exchange__currency-text">USD:&nbsp;</div>
                             <div class="exchange__currency-amount">60.78</div>
                         </div>
                     </div>
                     <a href="/" class="exchange__link">All courses</a>
                 </div>
                 <div class="exchange__block">
-                    <div class="exchange__update">Update every 15 minutes, MSC 09.08.2022</div>
+                    <div class="exchange__update">Update every 15&nbsp;minutes, MSC 09.08.2022</div>
                     <img class="exchange__img" src="./src/img/icons/townhall.svg" alt="townhall">
                 </div>
             </div>
@@ -141,18 +143,62 @@
     <section class="map">
         <div class="container">
             <div class="map__wrapper">
-                <h2 class="map__title">You can use our services anywhere in the world</h2>
+                <h2 class="map__title">You can use our services anywhere in&nbsp;the world</h2>
                 <h3 class="map__subtitle">Withdraw and transfer money online through our application</h3>
                 <img class="map__img" src="./src/img/home/map.png" alt="map">
             </div>
         </div>
     </section>
     <section class="support">
-        <div class="container"></div>
+        <div class="container">
+            <div class="support__wrapper">
+                <h2 class="support__title">Support</h2>
+                <h3 class="support__subtitle">Subscribe Newsletter &amp;&nbsp;get</h3>
+                <h4 class="support__info">Bank News</h4>
+                <form class="support__input">
+                    <img src="./src/img/icons/email.svg" alt="email">
+                    <input type="email" class="support__input-input" placeholder="Your email">
+                    <button class="support__button" type="submit">
+                        <img class="support__button-img" src="./src/img/icons/send_plane.svg" alt="plane">
+                        <span class="support__button-text">Subscribe</span>
+                    </button>
+                </form>
+
+            </div>
+        </div>
     </section>
     <footer class="footer">
-        <div class="container">
-
+        <div class="footer__bg">
+            <div class="container">
+                <div class="footer__wrapper">
+                    <div class="footer__top">
+                        <img alt="logo" src="./src/img/icons/logo.png" class="footer__logo"></img>
+                        <div class="footer__info">
+                            <a href="tel:+7(495)9842513" class="footer__number">+7 (495) 984 25 13</a>
+                            <a href="mailto:info@neoflex.ru" class="footer__email">info@neoflex.ru</a>
+                        </div>
+                    </div>
+                    <ul class="footer__tags">
+                        <li class="footer__tags-item">About bank</li>
+                        <li class="footer__tags-item">Ask a&nbsp;Question</li>
+                        <li class="footer__tags-item">Quality of&nbsp;service</li>
+                        <li class="footer__tags-item">Requisites</li>
+                        <li class="footer__tags-item">Press center</li>
+                        <li class="footer__tags-item">Bank career</li>
+                        <li class="footer__tags-item">Investors</li>
+                        <li class="footer__tags-item">Analytics</li>
+                        <li class="footer__tags-item">Business and processes</li>
+                        <li class="footer__tags-item">Compliance and business ethics</li>
+                    </ul>
+                    <p class="footer__cookies">We&nbsp;use cookies to&nbsp;personalize our services and improve the user
+                        experience of
+                        our website. Cookies are small files containing information about previous visits
+                        to&nbsp;a&nbsp;website.
+                        If
+                        you do&nbsp;not want to&nbsp;use cookies, please change your browser settings
+                    </p>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
