--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <title>NeoBank</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/css/main.css">
     <link rel="stylesheet" href="./src/css/media.css">
 </head>
@@ -19,7 +17,7 @@
     <header class="header">
         <div class="container">
             <nav class="header__nav">
-                <img class="header__logo" src="./src/img/icons/neobank.png" alt="NeoBank">
+                <a class="header__logo" href="/">NeoBank</a>
                 <ul class="header__links">
                     <li class="header__links-link">Credit card</li>
                     <li class="header__links-link">Product</li>
