added line in footer, hover effect for button

--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
                         <li class="footer__tags-item">Business and processes</li>
                         <li class="footer__tags-item">Compliance and business ethics</li>
                     </ul>
+                    <div class="footer__line"></div>
                     <p class="footer__cookies">We&nbsp;use cookies to&nbsp;personalize our services and improve the user
                         experience of
                         our website. Cookies are small files containing information about previous visits
