slider, currency fetching, post email

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/css/main.css">
     <link rel="stylesheet" href="./src/css/media.css">
+    <script src="./src/js/index.js"></script>
 </head>
 
 <body>
@@ -106,27 +107,27 @@
                     <div class="exchange__currency">
                         <div class="exchange__currency-block">
                             <div class="exchange__currency-text">USD:&nbsp;</div>
-                            <div class="exchange__currency-amount">60.78</div>
+                            <div class="exchange__currency-amount">N/A</div>
                         </div>
                         <div class="exchange__currency-block">
-                            <div class="exchange__currency-text">USD:&nbsp;</div>
-                            <div class="exchange__currency-amount">60.78</div>
+                            <div class="exchange__currency-text">EUR:&nbsp;</div>
+                            <div class="exchange__currency-amount">N/A</div>
                         </div>
                         <div class="exchange__currency-block">
-                            <div class="exchange__currency-text">USD:&nbsp;</div>
-                            <div class="exchange__currency-amount">60.78</div>
+                            <div class="exchange__currency-text">SGD:&nbsp;</div>
+                            <div class="exchange__currency-amount">N/A</div>
                         </div>
                         <div class="exchange__currency-block">
-                            <div class="exchange__currency-text">USD:&nbsp;</div>
-                            <div class="exchange__currency-amount">60.78</div>
+                            <div class="exchange__currency-text">JPY:&nbsp;</div>
+                            <div class="exchange__currency-amount">N/A</div>
                         </div>
                         <div class="exchange__currency-block">
-                            <div class="exchange__currency-text">USD:&nbsp;</div>
-                            <div class="exchange__currency-amount">60.78</div>
+                            <div class="exchange__currency-text">CNH:&nbsp;</div>
+                            <div class="exchange__currency-amount">N/A</div>
                         </div>
                         <div class="exchange__currency-block">
-                            <div class="exchange__currency-text">USD:&nbsp;</div>
-                            <div class="exchange__currency-amount">60.78</div>
+                            <div class="exchange__currency-text">HKD:&nbsp;</div>
+                            <div class="exchange__currency-amount">N/A</div>
                         </div>
                     </div>
                     <a href="/" class="exchange__link">All courses</a>
@@ -147,6 +148,38 @@
             </div>
         </div>
     </section>
+    <section class="news">
+        <div class="container">
+            <div class="news__wrapper">
+                <h2 class="news__title">Current news from the world of finance</h2>
+                <h3 class="news__subtitle">We update the news feed every 15 minutes. You can learn more by clicking on
+                    the news
+                    you
+                    are interested in.
+                </h3>
+                <div class="news__slider">
+                    <div class="news__items">
+
+                    </div>
+                </div>
+                <div class="news__arrows">
+                    <button class="news__arrows-prev">
+                        <svg width="25" height="26" viewBox="0 0 25 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M0 9H15.1579V1.60858C15.1579 1.41552 15.4044 1.33452 15.5189 1.48994L24 13L15.5189 24.5101C15.4044 24.6655 15.1579 24.5845 15.1579 24.3914V17H0"
+                                stroke="white" />
+                        </svg>
+                    </button>
+                    <button class="news__arrows-next">
+                        <svg width="25" height="26" viewBox="0 0 25 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M0 9H15.1579V1.60858C15.1579 1.41552 15.4044 1.33452 15.5189 1.48994L24 13L15.5189 24.5101C15.4044 24.6655 15.1579 24.5845 15.1579 24.3914V17H0"
+                                stroke="white" />
+                        </svg>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="support">
         <div class="container">
             <div class="support__wrapper">
@@ -155,6 +188,7 @@
                 <h4 class="support__info">Bank News</h4>
                 <form class="support__input">
                     <img src="./src/img/icons/email.svg" alt="email">
+                    <span class="support__subscribed">You are already subscribed!</span>
                     <input type="email" class="support__input-input" placeholder="Your email">
                     <button class="support__button" type="submit">
                         <img class="support__button-img" src="./src/img/icons/send_plane.svg" alt="plane">
