--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/css/main.css">
     <link rel="stylesheet" href="./src/css/media.css">
+    <script src="./src/js/loadCurrency.js"></script>
+    <script src="./src/js/loadNews.js"></script>
+    <script src="./src/js/newsSlider.js"></script>
     <script src="./src/js/index.js"></script>
 </head>
 
